<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_loading_answers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.main.timetolerance.appparts.loading.LoadingAnswersActivity"
    tools:showIn="@layout/activity_loading_answers"
    android:weightSum="1">
    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/after_loading"
        android:textSize="25sp"/>

    <Button
        android:text="@string/bad_button"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/badButton"
        android:layout_weight="0.07" />

    <Button
        android:text="@string/ok_button"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/okButton"
        android:layout_weight="0.05" />

    <Button
        android:text="@string/good_button"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/goodButton"
        android:layout_weight="0.05" />
</LinearLayout>
