<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_text_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.main.timetolerance.appparts.textupdate.TextUpdateActivity"
    tools:showIn="@layout/activity_text_update">

    <TextView
        android:visibility="invisible"
        android:text="sddsf"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberTextView"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/buttonResult"
        android:layout_alignStart="@+id/buttonResult" />

    <TextView
        android:text="Click and see result\nHERE"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resultTextView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="2 X 2"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonResult"
        android:layout_above="@+id/badButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:visibility="invisible"
        android:text="@string/bad_button"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/badButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:visibility="invisible"
        android:text="@string/ok_button"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/okButton"
        android:layout_below="@+id/badButton"
        android:layout_alignLeft="@+id/badButton"
        android:layout_alignStart="@+id/badButton"
        android:layout_marginTop="20dp" />

    <Button
        android:visibility="invisible"
        android:text="@string/good_button"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/goodButton"
        android:layout_below="@+id/okButton"
        android:layout_alignLeft="@+id/okButton"
        android:layout_alignStart="@+id/okButton"
        android:layout_marginTop="20dp" />

</LinearLayout>
